--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "core-js": "^2.5.4",
     "moment": "^2.22.2",
     "ng-zorro-antd": "^1.1.1",
+    "ngx-infinite-scroll": "^6.0.1",
     "ngx-markdown": "^6.1.0",
     "ngx-moment": "^3.1.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
