--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.0",
     "angular2-token": "^0.2.0",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "moment": "^2.22.2",
     "ng-zorro-antd": "^1.1.1",
     "ngx-infinite-scroll": "^6.0.1",
