--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "node_modules/prismjs/themes/prism.css",
               "src/styles.css"
@@ -77,6 +80,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "styles.css"
             ],
