--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/material": "^6.4.5",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "angular2-token": "^0.2.0",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
+    "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ng-zorro-antd": "^1.1.1",
     "ngx-infinite-scroll": "^6.0.1",
