feat(): add route loading navigator

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
+    "@angular/flex-layout": "^6.0.0-beta.17",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/material": "^6.4.5",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@ngx-progressbar/core": "^5.0.1",
+    "@ngx-progressbar/router": "^5.0.1",
     "angular2-token": "^0.2.0",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
