--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@netbasal/content-loader": "^2.0.0",
     "@ngx-progressbar/core": "^5.0.1",
     "@ngx-progressbar/router": "^5.0.1",
     "angular2-token": "^0.2.0",
