--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,12 +30,14 @@
     "angular2-token": "^0.2.0",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ng-zorro-antd": "^1.1.1",
     "ngx-infinite-scroll": "^6.0.1",
     "ngx-markdown": "^6.1.0",
     "ngx-moment": "^3.1.0",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
@@ -60,5 +62,9 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
+  },
+  "engines": {
+    "node": "10.0.0",
+    "npm": "5.6.0"
   }
 }
